# haskellbook

./: .gitignore  README.md
ch1/: README.md  notes
ch10/: README.md  chEx.hs  meetupEx.hs  s10_2.hs  s10_4.hs  s10_6.hs
ch11/: README.md  asPatterns.hs  hutton.hs  langExs.hs  phone.hs  s11_12.hs  s11_12_programmer.hs  s11_17.hs  s11_6.hs  s11_9.hs  vigenere.hs
ch12/: README.md  chEx-ItsOnlyNatural.hs  chEx-LibForEither.hs  chEx-LibForMaybe.hs  chEx-StringProcessing.hs  chEx-Unfolds.hs  chEx-ValidateTheWord.hs
ch13/: README.md  chEx-Modifying.hs  chEx-Vigenere.hs
ch13/hangman/: .gitignore  LICENSE  hangman.cabal
ch13/hangman/exe/: Main.hs
ch13/hangman/src/: Hangman.hs  Main.hs  Puzzle.hs
ch14/: README.md  chEx-useQC.hs  chEx-vnumWord.hs  s6_coarb.hs  s6_identity.hs  s6_product.hs  s6_sum.hs  s6_trivial.hs
ch15/: README.md  chEx-monoid.hs  chEx-semigroup.hs  madness.hs  s12_mam.hs
ch16/: README.md  chEx1.hs  chEx2.hs  chEx3.hs  s16_10.hs  s16_15.hs  s16_7.hs  s16_9.hs
ch17/: README.md  chEx-combos.hs  chEx-instances.hs  chEx-specTypes.hs  s17_5.hs  s17_8-list.hs  s17_8-validation.hs  s17_8-zlist.hs
ch18/: README.md  chEx-helpers.hs  chEx-instances.hs  s18_4-Either.hs
ch19/: README.md
ch2/: ChExsFunctions.hs  FunctionWithLet.hs  FunctionWithWhere.hs  HeadCode.hs  README.md  learn.hs  test.hs
ch20/: README.md  chEx-filter.hs  chEx-instances.hs  s20_5.hs
ch21/: README.md  chEx.hs
ch22/: README.md  chEx.hs  s2.hs  s2_warmup.hs  s5_ask.hs  s6_app.hs  s6_comp.hs
ch23/: README.md  chEx.hs  s5_example.hs  s6_impl.hs  s7_basic.hs  s7_state.hs
(+100 files in other folders)
