name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
homepage:            hangman
license:             BSD3
license-file:        LICENSE
author:              Nick Hamblet
maintainer:          haskellbook.com
copyright:           2018 Author name here
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                   , data/dict.txt

executable hangman
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , split
                     , random
                     , hangman
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     Hangman
                     , Puzzle
  build-depends:       base >= 4.7 && < 5
                     , random
  default-language:    Haskell2010

